--- a/src/ByteBank.WepApp/appsettings.json
+++ b/src/ByteBank.WepApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:marcianoserver.database.windows.net,1433;Initial Catalog=ByteBank;Persist Security Info=False; User ID=AdmWillian;Password=Batman2022$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
