Adicionado classe para ordernar testes

--- a/tests/ByteBank.WebApp.Testes/ByteBank.WebApp.Testes.csproj
+++ b/tests/ByteBank.WebApp.Testes/ByteBank.WebApp.Testes.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ByteBank.Dominio.Testes\ByteBank.Dominio.Testes.csproj" />
+  </ItemGroup>
+
 </Project>
